fix: rotated clip-path showing border on firefox

--- a/src/components/settings/ColorSelector.module.scss
+++ b/src/components/settings/ColorSelector.module.scss
@@ -22,6 +22,7 @@
     width: 2.5rem;
     height: 2.5rem;
     cursor: pointer;
+    overflow: hidden;
     -webkit-tap-highlight-color: transparent;
 
     &::after {
